# PlaneGame

./: .gitignore  CMakeLists.txt  README.md
include/: GameObject.h  Player.h  resources.h
resources/: resources.rc
src/: main.cpp
